--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ COOJA.testlog
 *.firmware
 *.srf06-cc26xx
 *.zoul
+*.exp5438
 
 # do not ignore platform makefiles
 !Makefile.cc2538dk
@@ -49,6 +50,7 @@ COOJA.testlog
 !Makefile.sky
 !Makefile.srf06-cc26xx
 !Makefile.zoul
+!Makefile.exp5438
 
 # other nRF52 build artifacts
 *.jlink
